* V1.9.1.1
  * added "ck cd {CK entry}" to open a new shell in a given CK entry
  * added ck.compare_dicts examples
  * fixed some self tests
  * added safe recording of JSON (even if some keys are not serializable)

* V1.9.1
  * added ck.debug_out(i) to print dict to console
  * fixed strange warnings for Python 3.5+ on Windows and Linux (when installed via pip)
  * fixed repo renewing on latest Windows (when access error to Git files)
  * added ck show repo to show git status of all repos
  * started highly experimental support for stable repos or different branches/checkouts
    (particularly useful for Artifact Evaluation to check out only stable repos)

* V1.8.7 
  * fixed major bug with default license/author (to avoid crashing when adding new module)
  * fixed minor bug in API when starting CK web service and viewing entry (wcid option)
  * allow ~ in an archive name when archiving CK entries using 'ck zip ...'

* V1.8.6
  * added direct update of kernel vars via CMD similar to Git. For example:

    $ ck setup kernel --var.default_license="See CK LICENSE.txt for licensing details"
    $ ck setup kernel --var.default_copyright="See CK COPYRIGHT.txt for copyright details"
    $ ck setup kernel --var.default_developer="cTuning foundation"
    $ ck setup kernel --var.default_developer_email="admin@cTuning.org"
    $ ck setup kernel --var.default_developer_webpage="http://cTuning.org"

  * added -f flag to force removal of entries (i.e. ck rm x:y -f) to be compatible
    with bash rm -f ...

  * added JSON sorting when viewing entries from CMD (via ck load x:y)

* V1.8.5 
  * do not crash if renewing repo while staying inside it
  * fixed bug in "system_with_timeout" (was always returning error) - required by ck-clsmith
  * added "skip_sort" to "select" and "select_uoa" functions
  * added cfg['internal_keys'] to be able to check them in input
  * fixed minor bug when @file.json from CMD not found

* V1.8.4
  * fixed 'ck status' and version comparison