@@ -1,1 +1,4 @@
-{}
+{
+ "install_to_env":"",
+ "package_channel":""
+}
