@@ -3,6 +3,11 @@
   * added ck.compare_dicts examples
   * fixed some self tests
   * added safe recording of JSON (even if some keys are not serializable)
+  * printing user-friendly name (from info.json "data_name") when removing entries.
+    Useful when deleting env entries (ck rm env:*)
+  * added more user-friendly configuration of internal CK variables via
+    $ ck set kernel
+    $ ck set kernel var.install_to_env=yes
 
 * V1.9.1
   * added ck.debug_out(i) to print dict to console
